Attempt to fix homepage with new routing

--- a/routes.yaml
+++ b/routes.yaml
@@ -1,4 +1,7 @@
 routes:
+  /:
+    template: index
+    data: page.posts
   /feeds/kanejamison/:
     permalink: /feeds/kanejamison/
     template: feeds-authors
